# datasaur-2026

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  evaluate.py  llm_api_examples.ipynb
backend/: pyproject.toml
backend/data/evals/: FCB.jsonl  FCB0.jsonl  FCB2.jsonl  FCB_metrics.json  FCB_metrics0.json  FCB_metrics2.json
backend/scripts/: index_corpus.py
backend/src/: config.py  main.py  models.py
backend/src/notebooks/: build_index_gpu.ipynb
backend/src/rag/: bm25.py  embedder.py  llm.py  pipeline.py  prompt.py  reranker.py  retriever.py  vectorstore.py
frontend/: astro.config.mjs  package.json
frontend/src/components/: App.tsx  DiagnosisCard.tsx  ResultsList.tsx  SymptomForm.tsx  types.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
